# example-service

./: Cargo.toml  README.md  commands.json  config.toml
src/: graphql.rs  main.rs  objects.rs  service.rs  subsystem.rs
