[package]
name = "example-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.3"
log = "0.4.8"
circular-queue = "0.2.6"
example-api = { git = "ssh://git@github.com/Cube-OS/example-api"}
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service.git"}
cubeos-error = { git = "ssh://git@github.com/Cube-OS/cubeos-error.git"}
juniper = "0.14.2"
serde = "1.0"
serial = "0.4.0"

# enable features for cubeos-service
[features]
default = ['cubeos-service/default']
graphql = ['cubeos-service/graphql']
ground = ['cubeos-service/ground']
debug = ['cubeos-service/debug']
