[package]
name = "dandelions-service"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.3"
log = "0.4.8"
circular-queue = "0.2.6"
# dandelions-api = { git = "ssh://git@github.com/Cube-OS/dandelions-api"}
dandelions-api = { path = "../dandelions-api" }
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service"}
# cubeos-service = { path = "../cubeos-service" }
serde = "1.0"
serial = "0.4.0"

# enable features for cubeos-service
[features]
default = ['cubeos-service/default']
ground = ['cubeos-service/ground']
terminal = ['cubeos-service/terminal']
debug = ['cubeos-service/debug']
